--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -3,7 +3,7 @@
     %h2.ui.teal.image.header
       %img.image{:src => image_path("time.jpg")}/
       .content
-        Log-in to your account
+        Sign-up for your account
     = form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: "ui large form"}) do |f|
       .ui.stacked.segment
         .field
