--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,9 +10,5 @@
     - if current_user.present?
       = render "menu"
     - if flash.keys.present?
-      - message = flash[:alert].present? ? flash[:alert] : flash[:notice]
-      - klass = flash[:alert].present? ? 'negative' : "info"
-      .ui.floating.compact.transition.message.flash{class: klass}
-        %i.close.icon
-        .header=message
+      = render "flash"
     = yield
