--- a/app/views/users/dashboard.html.haml
+++ b/app/views/users/dashboard.html.haml
@@ -6,50 +6,27 @@
           .header.center.aligned Current Time
         .content
           .description#clockbox
-            .ui.small.buttons
-              %button.ui.button
-                Monday
-              %button.ui.button
-                6 November
-              %button.ui.button
-                2017
-            .ui.mini.steps
-              .step.day
-              .step.day_of_month
-              .step.month
-              .step.year
-            .ui.mini.statistics
-              .statistic.hr
-                .value
-                  23
-              .statistic.min
-                .value
-                  10
-              .statistic.sec
-                .value
-                  59
-          / %h4.ui.sub.header Activity
-          / .ui.small.feed
-          /   .event
-          /     .content
-          /       .summary
-          /         %a Elliot Fu
-          /         added
-          /         %a Jenny Hess
-          /         to the project
-          /   .event
-          /     .content
-          /       .summary
-          /         %a Stevie Feliciano
-          /         was added as an
-          /         %a Administrator
-          /   .event
-          /     .content
-          /       .summary
-          /         %a Helen Troy
-          /         added two pictures
-        .extra.content
-          %button.ui.button Join Project
+            .ui.horizontal.segments.date
+              .ui.grey.center.aligned.segment#day
+                %p
+              .ui.grey.center.aligned.segment#month
+                %p
+              .ui.grey.center.aligned.segment#year
+                %p
+            .ui.center.aligned.horizontal.segments.time
+              .ui.segment#hh
+                %p
+              .ui.grey.inverted.segment
+                %p :
+              .ui.segment#mm
+                %p
+              .ui.grey.inverted.segment
+                %p :
+              .ui.segment#ss
+                %p
+        .ui.bottom.attached.button
+          %i.hourglass.start.icon
+          Start Session
     .column
       .ui.centered.card
         .content
