Added daily sessions

--- a/app/views/users/dashboard.html.haml
+++ b/app/views/users/dashboard.html.haml
@@ -24,7 +24,7 @@
                 %p :
               .ui.segment#ss
                 %p
-        .ui.bottom.attached.button
+        .ui.bottom.attached.button#start_session
           %i.hourglass.start.icon
           Start Session
     .column
