Added initializer for removing fields_with_errors

--- a/app/views/users/dashboard.html.haml
+++ b/app/views/users/dashboard.html.haml
@@ -27,33 +27,33 @@
         .ui.bottom.attached.button#start_session{class: (@disable_session_button ? ' disabled' : "").to_s}
           %i.hourglass.start.icon
           Start Session
-    .column
-      .ui.centered.card
-        .content
-          .header Project Timeline
-        .content
-          %h4.ui.sub.header Activity
-          .ui.small.feed
-            .event
-              .content
-                .summary
-                  %a Elliot Fu
-                  added
-                  %a Jenny Hess
-                  to the project
-            .event
-              .content
-                .summary
-                  %a Stevie Feliciano
-                  was added as an
-                  %a Administrator
-            .event
-              .content
-                .summary
-                  %a Helen Troy
-                  added two pictures
-        .extra.content
-          %button.ui.button Join Project
+    / .column
+    /   .ui.centered.card
+    /     .content
+    /       .header Project Timeline
+    /     .content
+    /       %h4.ui.sub.header Activity
+    /       .ui.small.feed
+    /         .event
+    /           .content
+    /             .summary
+    /               %a Elliot Fu
+    /               added
+    /               %a Jenny Hess
+    /               to the project
+    /         .event
+    /           .content
+    /             .summary
+    /               %a Stevie Feliciano
+    /               was added as an
+    /               %a Administrator
+    /         .event
+    /           .content
+    /             .summary
+    /               %a Helen Troy
+    /               added two pictures
+    /     .extra.content
+    /       %button.ui.button Join Project
 
 .ui.centered.grid
   .ten.wide.column#daily_session
