--- a/app/views/users/start_session.js.haml
+++ b/app/views/users/start_session.js.haml
@@ -1,3 +1,4 @@
+$("#start_session").addClass("disabled");
 $(".message.flash").remove();
 $("body").append("#{escape_javascript(render :partial => 'flash')}");
 close_flash_message();
