Added admin type

--- a/app/views/users/_daily_session_table.html.haml
+++ b/app/views/users/_daily_session_table.html.haml
@@ -1,18 +1,24 @@
 %table.ui.celled.center.aligned.table
-  %thead
-    %tr
-      %th{colspan: 2}
-        Daily Sessions
-    %tr
-      %th Date
-      %th Time
-  %tbody
-    - daily_sessions_time.pluck(:created_at).each do |time|
-      - local_time = time.localtime
+  - if daily_sessions_time.present?
+    %thead
       %tr
-        %td= local_time.strftime("%A, %e %B, %Y")
-        %td= local_time.strftime("%I:%M:%S %P")
-  %tfoot
-    %tr
-      %th{colspan: 2}
-        = paginate daily_sessions_time, remote: true, params: {controller: 'users', action: 'get_daily_sessions'}
+        %th{colspan: 2}
+          Daily Sessions
+      %tr
+        %th Date
+        %th Time
+    %tbody
+      - daily_sessions_time.pluck(:created_at).each do |time|
+        - local_time = time.localtime
+        %tr{class: (local_time.hour > 10 ? "negative" : "").to_s}
+          %td= local_time.strftime("%A, %e %B, %Y")
+          %td= local_time.strftime("%I:%M:%S %P")
+    %tfoot
+      %tr
+        %th{colspan: 2}
+          = paginate daily_sessions_time, remote: true, params: {controller: 'users', action: 'get_daily_sessions'}
+  - else
+    %thead
+      %tr
+        %th{colspan: 2}
+          No sessions found.
